# bomb_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  helpers.cmake
editor/: CMakeLists.txt  editor.cpp  editor.h
engine/: CMakeLists.txt  engine.cpp  macros.h  pch.h  stdafx.h
engine/app/: CMakeLists.txt  app.cpp  app.h  dispatcher.h  entity.cpp  entity.h  scene.cpp  scene.h  time_manager.cpp  time_manager.h
engine/core/: CMakeLists.txt  bomb_engine.h  file_helper.cpp  file_helper.h
engine/core/graphics/: CMakeLists.txt  api_bridge.cpp  api_bridge.h  api_interface.h  apis.h  graphics_pipeline_type.h  renderer.cpp  renderer.h  spirv_shader.cpp  spirv_shader.h  vertex_data.h  window.cpp  window.h
engine/core/graphics/api_bridge/: CMakeLists.txt  api_interface.h  api_vulkan.cpp  api_vulkan.h  api_vulkan_structs.cpp  api_vulkan_structs.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderpass_builder.cpp  vulkan_renderpass_builder.h
engine/core/graphics/vulkan/: CMakeLists.txt  api_vulkan.cpp  api_vulkan.h  api_vulkan_structs.cpp  vulkan_pipeline_builder.cpp  vulkan_renderpass_builder.cpp
engine/graphics/: CMakeLists.txt  api_bridge.cpp  api_bridge.h  api_interface.h  e_api.h  graphics_pipeline_type.h  mesh.cpp  mesh.h  pch.h  renderer.cpp  renderer.h  spirv_shader.cpp  spirv_shader.h  vertex_data.cpp  vertex_data.h  window.cpp  window.h
engine/graphics/shaders/: compile_shader.bat  fragment.frag  fragment.spv  vertex.spv  vertex.vert
engine/graphics/vulkan/: CMakeLists.txt  api_vulkan.cpp  api_vulkan.h  api_vulkan_internal.h  api_vulkan_structs.cpp  api_vulkan_structs.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_gpu_buffer.cpp  vulkan_gpu_buffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_statics.cpp  vulkan_statics.h  vulkan_swapchain.cpp  vulkan_swapchain.h
engine/header_tool/: CMakeLists.txt  Cargo.toml  headercache.cache
engine/header_tool/src/: header_tool.rs  lib.rs  main.rs
engine/header_tool/src/header_tool/: checker.rs  generator.rs  header_checker.rs  header_generator.rs  header_parser.rs  included.h  parser.rs  remover.rs  test_header.h
engine/header_tool/src/header_tool/parser/: enitities_representations.rs
engine/header_tool/src/header_tool/somemod/: test_header.h
engine/scene/: CMakeLists.txt  entity.cpp  entity.h  scene.cpp  scene.h
engine/script/: CMakeLists.txt  internal.h  native_script.cpp  native_script.h  scriptable.h
engine/tools/: CMakeLists.txt  coroutine.cpp  coroutine.h  dispatcher.cpp  dispatcher.h  log.cpp  log.h  stopwatch.cpp  stopwatch.h  task_graph.cpp  task_graph.h  thread_safe_queue.cpp  thread_safe_queue.h  tools.h
engine/utilities/: CMakeLists.txt  bomb_engine.h  file_helper.cpp  file_helper.h
plugins/: CMakeLists.txt
plugins/first_party/: CMakeLists.txt
plugins/first_party/pybomb/: CMakeLists.txt  header_cache.cache  pybinder.py  pybomb.cpp  pybomb.h  pybomb_cpp.cpp  pybomb_cpp.h  pybomb_module.cpp
plugins/first_party/pybomb/pybinder/: Cargo.toml  header_checker.py  header_tool.py  pybinder.py
plugins/first_party/pybomb/pybinder/src/: lib.rs  main.rs  pybinder.rs
plugins/first_party/pybomb/pybinder/src/pybinder/: binder.rs
plugins/first_party/pybomb/pybinder/src/pybinder/binder/: generator.rs  pybindify.rs
plugins/first_party/pybomb/pybinder/src/sample_gen/json/mod1/: sample.json  test.json
plugins/first_party/pybomb/pybinder/src/sample_gen/json/mod2/: empty.json
plugins/first_party/pybomb/python_binder/: main.cpp
plugins/user_defined/: CMakeLists.txt
